# SocialBlock

app/: package-lock.json  package.json
app/src/contexts/: ClientWalletProvider.tsx
app/src/pages/: _app.tsx  index.tsx
app/src/sections/: Layout.tsx
programs/drm/: Cargo.toml
